test/15_error_type_mismatch.xeno
function main(): void {
    int x = "hello"; // error
}
